Updated main.cpp to include the headerfile for linking

--- a/cpp_conditionals.project
+++ b/cpp_conditionals.project
@@ -93,6 +93,8 @@
     </Configuration>
   </Settings>
   <VirtualDirectory Name="src">
+    <File Name="Log.h"/>
+    <File Name="log.cpp"/>
     <File Name="main.cpp"/>
   </VirtualDirectory>
 </CodeLite_Project>
